Fixed overflow error in paragraphs long text

--- a/docroot/profiles/custom/sitenow/css/admin-overrides.css
+++ b/docroot/profiles/custom/sitenow/css/admin-overrides.css
@@ -46,6 +46,6 @@
 }
 
 /* Add padding for paragraph textarea fields */
-.field--widget-paragraphs .field--type-text-long  .cke_wysiwyg_frame {
+.field--widget-paragraphs .field--type-text-long  .cke_contents {
   padding: 10px;
 }
